--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,6 +65,7 @@
             },
             error : function(e) {           //请求失败的回调函数
                 console.log(e);
+                alert("失败");
             }
         });
     };
