--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,10 +13,12 @@
 <!-- main -->
 <div class="main">
     <h1>
-        批量扫描工具
+        工具
     </h1>
     <form>
-        启始<input type="text" id="cloud" value="H1000000" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'H1000000';}"
+        首字母<input type="text" id="head" value="H" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'H';}"
+                 required="">
+        启始<input type="text" id="cloud" value="1000000" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = '1000000';}"
                  required="">
         数量<input type="text" id="count" value="10000" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = '';}"
                  required="">
@@ -45,9 +47,7 @@
         };*/
         var cloud = document.getElementById("cloud").value;
         var count = document.getElementById("count").value;
-        if (count != ''){
-            cloud = cloud+";"+count;
-        }
+        var head = document.getElementById("head").value;
         /*var data = JSON.stringify(adata);*/
         $.ajax({
             type : "GET",
@@ -55,7 +55,7 @@
             contentType : "application/json",//上传内容格式为json结构
            /* data : data, */                                //上传的参数
             async: true ,
-            url : "cloudSee/scan?fileName="+cloud,     //请求的url。与后端@Request Mapping注解中的值一致。
+            url : "cloudSee/scan?fileName="+cloud+"&fileHead="+head+"&count="+count,     //请求的url。与后端@Request Mapping注解中的值一致。
             success : function(data) {//请求成功的回调函数
                 console.log(data);
                 if (data.code === 200){
